--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,1 +1,7 @@
-<p>quote-details works!</p>
+<div id="details">
+    <p>Author Name : {{quote.author}}</p>
+    <p>Submitted By : {{quote.publisher}}</p>
+    <p>Created On : {{quote.completeDate}}</p>
+    <p id="timePassed" >Time since posted: {{quote.completeDate|DateCount}} days</p>
+    
+</div>
