Add animation and white text to title

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,10 +11,10 @@ body{
   background-position: 0 0;
   background-attachment: fixed;
 }
-/* h1{
+h1{
   font-family: 'Dancing Script', cursive;
 }
 .title-area{
    background-color: grey;
 
-} */
+}
